fix overflow on mobile

--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -7,7 +7,7 @@
 
   background-color: $color_dark;
 
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 750px) {
